[Cairo] [TextureMapper] Assertion failure in TextureMapperGL https://bugs.webkit.org/show_bug.cgi?id=95713

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-09-04
Reviewed by Noam Rosenthal.

Fix an assertion failure by returning a valid context always for GraphicsContext3D::platformContext.
This is important because TextureMapperGL uses the platform context to perform hashing.

No new tests. This is covered by existing accelerated compositing tests.

* platform/graphics/cairo/GraphicsContext3DPrivate.cpp:
(WebCore::GraphicsContext3DPrivate::platformContext): Return the current GLContext
when getting the platform context for private GraphicsContext3DPrivates that render
to the currently active context.

Canonical link: https://commits.webkit.org/113618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127465 268f45cc-cd09-0410-ab3c-d52691b4dbfc